Каталог на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -29,9 +29,15 @@
             />
             <button class="button" id="search-submit" type="submit"></button>
           </form>
-          <a class="header-btn-bookmarks" href="#"> Закладки: <span>0</span></a>
-          <a class="header-btn-cart-full" href="#">Корзина: <span>10</span></a>
-          <a class="header-btn-order" href="#">Оформить заказ</a>
+          <div class="header-btn-wrapper">
+            <a class="header-btn-bookmarks" href="#">
+              Закладки: <span>0</span></a
+            >
+            <a class="header-btn-cart-full" href="#"
+              >Корзина: <span>10</span></a
+            >
+            <a class="header-btn-order" href="#">Оформить заказ</a>
+          </div>
         </div>
       </div>
       <div class="main-bar">
@@ -206,12 +212,7 @@
             </div>
             <h2 class="hidden">Перфораторы</h2>
             <div class="all-product-cards-catalog">
-              <article class="product-card">
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">25500 Р.</a>
-                <span class="old-price">30500 Р.</span>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg6000.jpg"
@@ -219,13 +220,14 @@
                   width="144"
                   height="128"
                 />
-              </article>
-              <article class="product-card">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">25500 Р.</a>
                 <span class="old-price">30500 Р.</span>
+                <a class="price" href="#">25500 Р.</a>
+
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
+              </article>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg6000.jpg"
@@ -233,14 +235,13 @@
                   width="144"
                   height="128"
                 />
-              </article>
-              <article class="product-card">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p>New</p>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">25500 Р.</a>
                 <span class="old-price">30500 Р.</span>
+                <a class="price" href="#">25500 Р.</a>
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
+              </article>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg6000.jpg"
@@ -248,14 +249,13 @@
                   width="144"
                   height="128"
                 />
+                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <span class="old-price">30500 Р.</span>
+                <a class="price" href="#">25500 Р.</a>
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
               </article>
-              <article class="product-card">
-                <h3>Перфоратор BOSCH BFG 3000</h3>
-                <p>NEW</p>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">15500 Р.</a>
-                <span class="old-price">22500 Р.</span>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg3000.jpg"
@@ -263,13 +263,13 @@
                   width="127"
                   height="112"
                 />
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <span class="old-price">22500 Р.</span>
+                <a class="price" href="#">15500 Р.</a>
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
               </article>
-              <article class="product-card">
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">25500 Р.</a>
-                <span class="old-price">30500 Р.</span>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg6000.jpg"
@@ -277,13 +277,13 @@
                   width="144"
                   height="128"
                 />
+                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <span class="old-price">30500 Р.</span>
+                <a class="price" href="#">25500 Р.</a>
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
               </article>
-              <article class="product-card">
-                <h3>Перфоратор BOSCH BFG 2000</h3>
-                <p>NEW</p>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">12500 Р.</a>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg2000.jpg"
@@ -291,14 +291,12 @@
                   width="127"
                   height="112"
                 />
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <a class="price" href="#">12500 Р.</a>
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
               </article>
-              <article class="product-card">
-                <h3>Перфоратор BOSCH BFG 3000</h3>
-                <p>NEW</p>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">15500 Р.</a>
-                <span class="old-price">22500 Р.</span>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg3000.jpg"
@@ -306,13 +304,13 @@
                   width="127"
                   height="112"
                 />
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <span class="old-price">22500 Р.</span>
+                <a class="price" href="#">15500 Р.</a>
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
               </article>
-              <article class="product-card">
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">25500 Р.</a>
-                <span class="old-price">30500 Р.</span>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg6000.jpg"
@@ -320,13 +318,13 @@
                   width="144"
                   height="128"
                 />
+                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <span class="old-price">30500 Р.</span>
+                <a class="price" href="#">25500 Р.</a>
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
               </article>
-              <article class="product-card">
-                <h3>Перфоратор BOSCH BFG 2000</h3>
-                <p>NEW</p>
-                <a href="#" class="button-goods-buy">Купить</a>
-                <a href="#" class="button-goods-bookmarks">В закладки</a>
-                <a class="price" href="#">12500 Р.</a>
+              <article class="product-card catalog">
                 <img
                   class="product-card-image"
                   src="img/items-bfg2000.jpg"
@@ -334,6 +332,10 @@
                   width="127"
                   height="112"
                 />
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <a class="price" href="#">12500 Р.</a>
+                <!--<a href="#" class="button-goods-buy">Купить</a>
+                <a href="#" class="button-goods-bookmarks">В закладки</a>-->
               </article>
             </div>
           </div>
