Завершение верстки внутр страницы

--- a/catalog.html
+++ b/catalog.html
@@ -226,7 +226,7 @@
                         class="pricing"
                         id="price-max"
                         type="text"
-                        value="30 000"
+                        value="30000"
                       />
                     </label>
                   </div>
