--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <h2 class="hidden">Услуги</h2>
         <ul class="features-list">
           <li class="feature-item">
+            <p class="new-product new-promo uppercase">new</p>
             <h3>Материалы</h3>
             <svg width="44" height="65" viewBox="0 0 44 65" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M37.91 30.438V41.307C37.91 41.307 38.015 44.042 35.085 44.042C32.016 44.042 31.96 41.307 31.96 41.307V34.891C31.96 34.651 31.624 32.982 29.641 32.982C27.016 32.982 26.971 34.859 26.971 34.859V54.08C26.971 54.08 27 55.943 24.507 55.943C22 55.943 22 53.96 22 53.96V40.016C22 40.016 22 37.071 18.195 37.071C14.141 37.071 14.228 40.196 14.228 40.196V43.924C14.228 43.924 14.107 46.869 9.54 46.869C4.973 46.869 4.912 42.36 4.912 42.36V29.938C3.168 28.976 0 26.671 0 26.671V56.003C0 56.003 2.988 65 22 65C41.012 65 44 56.305 44 56.305V26.671C41.062 29.5 37.91 30.438 37.91 30.438Z" fill="white"/>
@@ -518,6 +519,7 @@
         </section>
         <ul class="footer-catalog-list">
           <li class="footer-catalog-item">
+            
             <a href="#">Материалы</a>
           </li>
           <li class="footer-catalog-item">
